# bench

./: .gitignore  BUGS.md  LICENSE  Makefile  README.md  flake.nix  mkdocs.yml  pyproject.toml
docs/: index.md  tutorial.md
docs/api/: cli.md  data.md  grammar.md  index.md  metrics.md  policies.md  reporting.md  runners.md
examples/: benchmark.py  combinators.py  compare_baseline.py  convergence.py  custom_metric.py  custom_policy.py  custom_processor.py  discovery.py  factory.py  failure_handling.py  harness.py  hyperfine_like.sh  jit_warmup.py  lox.py  lox_test.py  matrix.py  matrix_skips.py  multiple_suites.py  params.py  perf_cache_misses.py  programmatic.py  rcp.py  sleep_bench.py  vm_matrix.py
examples/tutorial/: 011_simple.py  01_simple.py  021_custom_metric.py  02_better_summary.py  02_custom_metric.py  03_custom_metric.py  03_harness.py  04_awfy.py  06_awfy.py
examples/tutorial/benchmarks/: fib.py  hanoi.py  zoo_batch.py
examples/workloads/: fakevm.py  fib.py  sort.py  sum.py
scripts/: generate_schema.py
src/bench/: __init__.py  __main__.py  cli.py  denoise.py  launch.py  perf.py  run.py  utils.py
src/bench/builder/: __init__.py  base.py  benchmark.py  suite.py
src/bench/core/: checks.py  environment.py  execution.py  invocation.py  metric.py  outlier.py  policy.py  process.py  results.py  sample.py
src/bench/grammar/: __init__.py  benchmark.py  builder.py  context.py  suite.py
src/bench/report/: __init__.py  formatter.py  render.py  reporter.py  stats.py  (+2 more)
src/benchr/: __init__.py  __main__.py  cli.py  output.py  parsers.py  results.py  suites.py  types.py  utils.py
tests/: conftest.py  test_benchmark.py  test_checks.py  test_cli.py  test_cli_environment.py  test_context.py  test_controller.py  test_denoise.py  test_e2e.py  test_environment.py  test_examples.py  test_execution.py  test_formatter.py  test_harness.py  test_invocation.py  test_launch.py  test_loop.py  test_metric.py  test_model.py  test_outlier.py  test_pacing.py  test_perf.py  test_policy.py  test_processor.py  test_render.py  test_report_environment.py  test_reporter.py  test_runner.py  test_sample.py  test_source.py  test_stats.py  test_suite.py  test_summary.py
(+33 files in other folders)
