[project]
name = "benchr"
version = "0.1.0"
description = "A lightweight Python benchmarking framework"
requires-python = ">=3.12"
dependencies = [
    "cattrs>=26.1.0",
    "rich",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
benchr = "benchr.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchr"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
include = ["src", "tests", "examples"]
strict = ["src"]
